--- a/index.html
+++ b/index.html
@@ -472,8 +472,12 @@
         </div>
       </div>
       <div class="row">
+        <!-- Steps -->
+
         <div class="col-md-6">
           <div class="d-flex flex-column">
+            <!-- 1 -->
+
             <div class="step d-flex mx-auto mb-5">
               <img
                 src="./images/icons/select-icon.png"
@@ -488,6 +492,11 @@
                 </p>
               </div>
             </div>
+
+            <!-- 1 -->
+
+            <!-- 2 -->
+
             <div class="step d-flex mx-auto mb-5">
               <img
                 src="./images/icons/swim-icon.png"
@@ -502,6 +511,11 @@
                 </p>
               </div>
             </div>
+
+            <!-- 2 -->
+
+            <!-- 3 -->
+
             <div class="step d-flex mx-auto mb-5">
               <img
                 src="./images/icons/car-icon.png"
@@ -516,8 +530,13 @@
                 </p>
               </div>
             </div>
+
+            <!-- 3 -->
           </div>
         </div>
+
+        <!-- Steps -->
+
         <div class="col-md-6">
           <div class="bookCard1"></div>
         </div>
