--- a/index.html
+++ b/index.html
@@ -538,7 +538,43 @@
         <!-- Steps -->
 
         <div class="col-md-6">
-          <div class="bookCard1"></div>
+          <div>
+            <div class="bookCard1 d-flex flex-column justify-content-between">
+              <img src="./images/greece.jpg" alt="greece" class="bookCardImg" />
+              <h5>Trip to Greece</h5>
+              <p class="bookCardP">14-29 June | by Robbin Joseph</p>
+              <div class="d-flex">
+                <div
+                  class="bookCI d-flex justify-content-center align-items-center"
+                >
+                  <img src="./images/icons/leaf-icon.svg" alt="leaf-icon" />
+                </div>
+                <div
+                  class="bookCI mx-3 d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    src="./images/icons/map-paper-icon.svg"
+                    alt="map-paper-icon"
+                  />
+                </div>
+                <div
+                  class="bookCI d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    src="./images/icons/send-icon-grey.svg"
+                    alt="send-icon"
+                  />
+                </div>
+              </div>
+              <div class="bookCardP">
+                <img
+                  src="./images/icons/building-icon.svg"
+                  alt="building-icon"
+                />
+                24 people going
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
