--- a/index.html
+++ b/index.html
@@ -538,11 +538,11 @@
         <!-- Steps -->
 
         <div class="col-md-6">
-          <div>
+          <div class="mb-5">
             <div class="bookCard1 d-flex flex-column justify-content-between">
               <img src="./images/greece.jpg" alt="greece" class="bookCardImg" />
-              <h5>Trip to Greece</h5>
-              <p class="bookCardP">14-29 June | by Robbin Joseph</p>
+              <h5 class="my-3 fw-semibold">Trip to Greece</h5>
+              <p class="bookCardP fw-medium">14-29 June | by Robbin Joseph</p>
               <div class="d-flex">
                 <div
                   class="bookCI d-flex justify-content-center align-items-center"
@@ -566,12 +566,26 @@
                   />
                 </div>
               </div>
-              <div class="bookCardP">
-                <img
-                  src="./images/icons/building-icon.svg"
-                  alt="building-icon"
-                />
-                24 people going
+              <div class="bookCardP mt-3 d-flex justify-content-between">
+                <div>
+                  <img
+                    src="./images/icons/building-icon.svg"
+                    alt="building-icon"
+                  />
+                  <span class="mx-2 fw-medium">24 people going</span>
+                </div>
+                <img src="./images/icons/heart-icon.svg" alt="heart-icon" />
+              </div>
+            </div>
+            <div class="bookCard2 d-flex">
+              <img src="./images/rome.png" alt="rome" class="bookCardImg2" />
+              <div class="fw-medium">
+                <p class="bookCardP">Ongoing</p>
+                <h5>Trip to Rome</h5>
+                <p><span>40%</span> completed</p>
+                <div class="progress" role="progressbar">
+                  <div class="progress-bar"></div>
+                </div>
               </div>
             </div>
           </div>
