--- a/index.html
+++ b/index.html
@@ -538,7 +538,9 @@
         <!-- Steps -->
 
         <div class="col-md-6">
-          <div class="mb-5">
+          <div
+            class="mb-5 mt-md-0 mt-5 d-flex flex-column align-items-lg-start align-items-center"
+          >
             <div class="bookCard1 d-flex flex-column justify-content-between">
               <img src="./images/greece.jpg" alt="greece" class="bookCardImg" />
               <h5 class="my-3 fw-semibold">Trip to Greece</h5>
@@ -577,13 +579,13 @@
                 <img src="./images/icons/heart-icon.svg" alt="heart-icon" />
               </div>
             </div>
-            <div class="bookCard2 d-flex">
+            <div class="bookCard2 p-3 d-flex">
               <img src="./images/rome.png" alt="rome" class="bookCardImg2" />
-              <div class="fw-medium">
-                <p class="bookCardP">Ongoing</p>
-                <h5>Trip to Rome</h5>
-                <p><span>40%</span> completed</p>
-                <div class="progress" role="progressbar">
+              <div class="fw-medium mx-2">
+                <p class="bookCardP2 m-0">Ongoing</p>
+                <h6 class="mt-1">Trip to Rome</h6>
+                <p class="m-0 mt-2"><span>40%</span> completed</p>
+                <div class="progress mt-1" role="progressbar">
                   <div class="progress-bar"></div>
                 </div>
               </div>
