--- a/index.html
+++ b/index.html
@@ -601,11 +601,13 @@
 
     <!-- START -->
 
-    <!-- <div class="container-fluid">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-11 mx-auto max-width py-4"></div>
+        <div class="col-11 mx-auto max-width py-4 text-center">
+          3 MORE SECTIONS UNDER DEVELOPMENT
+        </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- END -->
 
