--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 
         <div class="col-md-6">
           <div
-            class="mb-5 mt-md-0 mt-5 d-flex flex-column align-items-lg-start align-items-center"
+            class="mt-md-0 mt-5 d-flex flex-column align-items-lg-start align-items-center"
           >
             <div class="bookCard1 d-flex flex-column justify-content-between">
               <img src="./images/greece.jpg" alt="greece" class="bookCardImg" />
@@ -599,21 +599,45 @@
 
     <!-- _________________________________________________________________________________ -->
 
-    <!-- START -->
+    <!-- WHAT PEOPLE SAY START -->
 
-    <div class="container-fluid">
+    <!-- <div class="container-fluid whatPeoplesay">
       <div class="row">
         <div class="col-11 mx-auto max-width py-4 text-center">
-          3 MORE SECTIONS UNDER DEVELOPMENT
+          <h2 class="fw-bold text-center mt-4 mb-5">
+            What People Say About Us
+          </h2>
+          <div class="carosol mb-4">
+            <img src="./images/china.png" alt="china" />
+            <div class="d-flex flex-column align-items-center">
+              <img src="./images/boy.png" alt="boy" class="boy" />
+              <div class="whatPCard px-5 text-center py-3">
+                <p class="pt-5 mt-3 whatP mx-5">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
+                  aliquam, purus sit amet luctus venenatis, lectus magna
+                  fringilla urna, porttitor
+                </p>
+                <h4 class="fw-bold pt-3">-Jeo Stanlee</h4>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <!-- END -->
+    <!-- WHAT PEOPLE SAY END -->
 
     <!-- _________________________________________________________________________________ -->
 
     <!-- START -->
+
+    <!-- <div class="container-fluid">
+      <div class="row">
+        <div class="col-11 mx-auto max-width py-4 text-center"></div>
+      </div>
+    </div> -->
+
+    <!--END -->
 
     <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
