--- a/index.html
+++ b/index.html
@@ -601,14 +601,14 @@
 
     <!-- WHAT PEOPLE SAY START -->
 
-    <!-- <div class="container-fluid whatPeoplesay">
+    <div class="container-fluid whatPeoplesay">
       <div class="row">
         <div class="col-11 mx-auto max-width py-4 text-center">
           <h2 class="fw-bold text-center mt-4 mb-5">
             What People Say About Us
           </h2>
-          <div class="carosol mb-4">
-            <img src="./images/china.png" alt="china" />
+          <div class="mb-4">
+            <div class="china rounded-4"></div>
             <div class="d-flex flex-column align-items-center">
               <img src="./images/boy.png" alt="boy" class="boy" />
               <div class="whatPCard px-5 text-center py-3">
@@ -623,9 +623,36 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- WHAT PEOPLE SAY END -->
+
+    <!-- _________________________________________________________________________________ -->
+
+    <!-- NEWS LETTER START -->
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-11 mx-auto max-width py-4 text-center">
+          <div class="emailCard">
+            <h4 class="text-center">
+              Subscribe to get information, latest news and other interesting
+              offers about Cobham
+            </h4>
+            <form>
+              <input type="email" />
+              <button
+                class="discover-btn border-0 mb-5 px-4 py-2 rounded-2 fw-semibold text-light"
+              >
+                Subscribe
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- NEWS LETTER END -->
 
     <!-- _________________________________________________________________________________ -->
 
