--- a/index.html
+++ b/index.html
@@ -631,13 +631,13 @@
 
     <!-- NEWS LETTER START -->
 
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
       <div class="row">
         <div class="col-11 mx-auto max-width py-4 text-center">
           <div class="emailCard">
             <h4 class="text-center">
               Subscribe to get information, latest news and other interesting
-              offers about Cobham
+              offers about Cobham.
             </h4>
             <form>
               <input type="email" />
@@ -650,7 +650,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- NEWS LETTER END -->
 
