--- a/index.html
+++ b/index.html
@@ -631,18 +631,20 @@
 
     <!-- NEWS LETTER START -->
 
-    <!-- <div class="container-fluid">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-11 mx-auto max-width py-4 text-center">
-          <div class="emailCard">
-            <h4 class="text-center">
+        <div
+          class="col-11 mx-auto max-width my-5 py-4 text-center d-flex justify-content-center"
+        >
+          <div class="emailCard p-5">
+            <h4 class="text-center fw-semibold emailP">
               Subscribe to get information, latest news and other interesting
               offers about Cobham.
             </h4>
             <form>
               <input type="email" />
               <button
-                class="discover-btn border-0 mb-5 px-4 py-2 rounded-2 fw-semibold text-light"
+                class="discover-btn border-0 mb-5 px-5 py-3 rounded-2 fw-semibold text-light"
               >
                 Subscribe
               </button>
@@ -650,7 +652,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- NEWS LETTER END -->
 
