--- a/index.html
+++ b/index.html
@@ -671,15 +671,73 @@
 
     <!-- _________________________________________________________________________________ -->
 
-    <!-- START -->
+    <!-- FOOTER START -->
 
-    <!-- <div class="container-fluid">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-11 mx-auto max-width py-4 text-center"></div>
-      </div>
-    </div> -->
+        <div
+          class="col-11 mx-auto max-width py-4 d-flex flex-md-row flex-column justify-content-center"
+        >
+          <!-- logo  -->
 
-    <!--END -->
+          <div class="d-flex flex-column align-items-center px-5">
+            <img
+              src="./images/logo-black.svg"
+              alt="logo-black.svg"
+              class="footerLogo"
+            />
+            <p class="footerP fw-semibold pt-4">
+              Book your trip in minute, get full <br />Control for much longer.
+            </p>
+          </div>
+
+          <!-- logo  -->
+
+          <!-- footerLinks  -->
+
+          <div
+            class="footerLinks pt-md-0 pb-md-0 pt-5 pb-5 px-5 mx-5 d-flex flex-lg-row flex-column justify-content-between text-md-start text-center"
+          >
+            <div class="d-flex flex-column justify-content-between">
+              <h6>Company</h6>
+              <a href="#">About</a><a href="#" class="my-3">Careers</a
+              ><a href="#">Mobile</a>
+            </div>
+            <div
+              class="d-flex flex-column justify-content-between px-lg-5 mx-lg-5 pt-lg-0 pb-lg-0 pt-5 pb-5"
+            >
+              <h6>Contact</h6>
+              <a href="#">Help/FAQs</a><a href="#" class="my-3">Press</a
+              ><a href="#">Affiliate</a>
+            </div>
+            <div class="d-flex flex-column justify-content-between">
+              <h6>More</h6>
+              <a href="#">Airline</a><a href="#" class="my-3">Airline Fee</a
+              ><a href="#">Low Fare Trips</a>
+            </div>
+          </div>
+
+          <!-- footerLinks  -->
+
+          <!-- discoverApp  -->
+
+          <div class="discoverApp">
+            <div class="sociaIcons d-flex justify-content-between">
+              <div class="fb"><i class="bi bi-facebook"></i></div>
+              <div class="ig mx-4"><i class="bi bi-instagram"></i></div>
+              <div class="twitt"><i class="bi bi-twitter-x"></i></div>
+            </div>
+            <p class="my-4">Discover our App.</p>
+            <div class="storeLinks"></div>
+          </div>
+
+          <!-- discoverApp  -->
+        </div>
+        <div class="text-center my-5">All Rights Reserved.</div>
+      </div>
+    </div>
+
+    <!--FOOTER END-->
 
     <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
